# HuffmanCoding

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Controller.cpp  Controller.hpp  main.cpp
src/Algorithm/: CMakeLists.txt  IAlgorithm.hpp  NodeAlgorithm.cpp  NodeAlgorithm.hpp  ParenthesisString.cpp  ParenthesisString.hpp  ParenthesisStringAlgorithm.cpp  ParenthesisStringAlgorithm.hpp  ParenthesisStringAlgorithm_DirtyVersion.cpp  ParenthesisStringAlgorithm_DirtyVersion.hpp  ParenthesisString_ChaoticVersion.cpp  ParenthesisString_ChaoticVersion.hpp
src/Common/: Logger.hpp
src/File/: CMakeLists.txt  FileHandler.cpp  FileHandler.hpp
test/: CMakeLists.txt
test/Algorithm/: CMakeLists.txt  ParenthesisStringTest.cpp
